<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_text"
        android:labelFor="@+id/edtLogin"/>

    <EditText
        android:id="@+id/edtLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:contentDescription="@string/login_text"
        android:hint="@string/login_text"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/password_text"
        android:labelFor="@+id/edtPassword"/>

    <EditText
        android:id="@+id/edtPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_text"
        android:contentDescription="@string/login_acessibility"
        android:textAllCaps="false"/>


</LinearLayout>